Bug 32458 - [llvmpipe] piglit EXT_packed_depth_stencil fbo-generatemipmap-formats fails on 32-bit
Summary: [llvmpipe] piglit EXT_packed_depth_stencil fbo-generatemipmap-formats fails o...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-16 15:14 UTC by Vinson Lee
Modified: 2011-10-07 08:53 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2010-12-16 15:14:17 UTC
mesa: 3ecf47af1252ad10f98d5ce488cc1b91fab64c25 (master)

piglit EXT_packed_depth_stencil fbo-generatemipmap-formats test fails on 32-bit
llvmpipe. The test passes on 64-bit llvmpipe.

$ ./bin/fbo-generatemipmap-formats -auto GL_EXT_packed_depth_stencil
Using test set: GL_EXT_packed_depth_stencil
Testing GL_DEPTH_STENCIL_EXT
Probe at (259,1)
  Expected: 0.011719 0.011719 0.011719
  Observed: 0.509804 0.509804 0.509804
Testing GL_DEPTH24_STENCIL8_EXT
Probe at (259,1)
  Expected: 0.011719 0.011719 0.011719
  Observed: 0.509804 0.509804 0.509804
PIGLIT: {'result': 'fail' }
Comment 1 Vinson Lee 2010-12-18 14:31:24 UTC
llvmpipe 64-bit results
cae2bb76c1147d48f75ddd7a058a48d11e72ba03: pass
b89a731ff297dec597e3a4be1abf94e97d9b0e44: fail

piglit EXT_packed_depth_stencil fbo-generatemip-formats was fixed on 64-bit llvmpipe by one the following commits.

commit cae2bb76c1147d48f75ddd7a058a48d11e72ba03
Author: Brian Paul <brianp@vmware.com>
Date:   Mon Dec 6 11:01:19 2010 -0700

    st/mesa: fix mipmap generation bug
    
    In st_finalize_texture() we were looking at the st_texture_object::
    lastLevel field instead of the pipe_resource::last_level field to
    determine which resource to store the mipmap in.
    
    Then, in st_generate_mipmap() we need to call st_finalize_texture() to
    make sure the destination resource is properly allocated.
    
    These changes fix the broken piglit fbo-generatemipmap-formats test.

commit c1095f0b0c636832acdfeb5dbf5595cb9b8bf513
Author: Brian Paul <brianp@vmware.com>
Date:   Mon Dec 6 10:10:58 2010 -0700

    mesa/llvm: use llvm-config --cppflags
    
    Use --cppflags instead of --cflags so that we get the -I and -D flags
    we want, but not compiler options like -O3.
    
    A similar change should probably be made for autoconf.

commit 4fc62a074c5cc7e55a81c2a24cc5ef2f1452e948
Author: Brian Paul <brianp@vmware.com>
Date:   Fri Dec 3 18:13:45 2010 -0700

    gallium/util: minor formatting fixes
Comment 2 Brian Paul 2011-10-07 08:53:52 UTC
Fixed with commit 23c6eb035ba63d39652a10107f323d47b86b90f1
I was seeing the bug with llvmpipe on 64-bit, btw.  And softpipe.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.