mesa: fix software mipmap generation code for packed Z/stencil formats

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=32458

Reviewed-by: Chad Versace <chad@chad-versace.us>